# Project

./: .gitignore
CPP - Paralleling Test/: CMakeLists.txt  parSTL.cpp
CPP - Paralleling Test/src/app/: CMakeLists.txt
CPP - Paralleling Test/src/openMPTest/: CMakeLists.txt  tutorial
CPP - Paralleling Test/src/openMPTest/include/: controllingThreadData.hpp  workSharing.hpp
CPP - Paralleling Test/src/openMPTest/src/: controllingThreadData.cpp  loopSchedulesVisualize.cpp  workSharing.cpp
CPP - Paralleling Test/src/parallelSTLTest/: CMakeLists.txt
CPP - Paralleling Test/src/parallelSTLTest/include/: parSTL.hpp
CPP - Paralleling Test/src/parallelSTLTest/src/: parSTL.cpp
CPP - VTK Test/MultipleRenderWindows/: CMakeLists.txt
CPP - VTK Test/MultipleViewports/: MultipleViewports.cxx
CPP_Paralleling-Test/: .gitignore  Allclean  Allmake  CMakeLists.txt  buildProjectWin.bat  runProjectWin.bat
CPP_Paralleling-Test/src/app/: CMakeLists.txt  main.cpp
CPP_Paralleling-Test/src/openMPTest/include/: loopSchedules.hpp  loopSchedulesVisualize.hpp  threadMismatch.hpp
CPP_Paralleling-Test/src/openMPTest/src/: loopSchedules.cpp  threadMismatch.cpp
CPP_Paralleling-Test/src/parallelSTLTest/: CMakeLists.txt
CPP_Paralleling-Test/src/parallelSTLTest/src/: parSTL.cpp
CPP_Qt-Test/thread-Visualize/: main.cpp
CPP_VSCode-Qt-Test/: Allmake  CMakeLists.txt  note.md
CPP_VSCode-Qt-Test/src/: calculatorform.cpp  calculatorform.h  main.cpp
CPP_VSCode-Test/: main.cpp
CPP_VSCode-Test/GetLogicalProcessorInformation/: main.cpp
CPP_VSCode-Test/Inheritacne/: Base.hpp  Derived.hpp  main.cpp
CPP_VSCode-Test/Make&Use DLL/: CMakeLists.txt  note.md
CPP_VSCode-Test/Make&Use DLL/client/: main.cpp
CPP_VSCode-Test/Make&Use DLL/exampleDLL/: Allmake  CMakeLists.txt  example.hpp
CPP_VSCode-Test/Make_And_Use_DLL/: Allmake
CPP_VSCode-Test/NUMANodeDetection/: main.cpp
CPP_VSCode-Test/Retrun Const Ref/: main.cpp
CPP_VSCode-Test/Return const/: main.cpp
CPP_VSCode-Test/stackTrace/: main.cpp
CPP_VSCode-Test/virtualDestructor/: main.cpp  note.md
CPP_VTK-Test/: Allmake  CMakeLists.txt  vtkPath.config
CPP_VTK-Test/BalloonWidget/: main.cxx
CPP_VTK-Test/Basic_Physically_Based_Rendering/: main.cxx  note.md
CPP_VTK-Test/BoxWidget/: Allmake  CMakeLists.txt  main.cxx  note.md
CPP_VTK-Test/CPUDepthPeeling/: Allmake  CMakeLists.txt
CPP_VTK-Test/ConnectionAndInputData/: main.cxx  note.md
CPP_VTK-Test/CopyStructureTest/: 0.vtu  main.cxx
CPP_VTK-Test/DeepCopy-ShallowCopy/: main.cxx
CPP_VTK-Test/HighlightWithSilhouette/: main.cxx
CPP_VTK-Test/HoverWidget/: main.cxx
CPP_VTK-Test/ImageMapper/: Allmake  CMakeLists.txt  main.cxx
CPP_VTK-Test/Light/: CMakeLists.txt  main.cxx  note.md
CPP_VTK-Test/Light1/: main.cxx  note.md
CPP_VTK-Test/Light2/: main.cxx
CPP_VTK-Test/Matrix_UserMatrix/: main.cxx  note.md
CPP_VTK-Test/MouseEvents/: Allmake  CMakeLists.txt
CPP_VTK-Test/MouseEventsObserver/: Allmake  CMakeLists.txt  main.cxx
CPP_VTK-Test/MultipleRenderWindows/: Allmake  CMakeLists.txt
CPP_VTK-Test/MultipleViewports/: Allmake  CMakeLists.txt
CPP_VTK-Test/ReaderPipelineUpdate/: bearing.vtu  main.cxx  note.md
CPP_VTK-Test/SetInputData-SetInputConnection/: Allmake  CMakeLists.txt
CPP_VTK-Test/Skybox_PBR/: main.cxx  note.md
CPP_VTK-Test/Texture/: main.cxx  note.md
CPP_VTK-Test/TextureCow/: main.cxx  note.md
CPP_VTK-Test/TexturedSphere/: main.cxx  note.md
CPP_VTK-Test/Transform/: main.cxx
CPP_VTK-Test/appendFilter/: 1.vtu  2.vtu  block.vtm  main.cxx
CPP_VTK-Test/camera/: note.md
CPP_VTK-Test/meshQualityVisualization/: Allmake  CMakeLists.txt  main.cxx  meshQualityVisualization.cxx  note.md  testGrid.vtk
CPP_VTK-Test/pipelineTest/: 1.vtu  main.cxx
CPP_VTK-Test/piplineUpdate/: note.md
CPP_VTK-Test/vtkThreeViewDrawing/: CMakeLists.txt  test.vtu  vtkThreeViewDrawing.cxx
C_VSCode-Test/: polar.c
Julia - 2D MPS/: InteractionModel.jl  MPS.ipynb  ParticleData.jl  SimulationDomain.jl  note.txt
Julia - 2D MPS/MPSJL/: Project.toml
Julia - Performance Test/: main.jl  note  performance case studies.ipynb
Julia - Performance Test/performanceEnv/: Manifest.toml
Julia_2D-MPS/: MPS.ipynb  example.jl  note.md
Julia_2D-MPS/MPSJL/: Manifest.toml  Project.toml
Julia_BowyerWatson/: BasicTypes.jl  Primitives.jl  bowyerWatson.jl  note.md
Julia_KDTree/: KDTree.jl  KDTreeModel.jl  Primitives.jl  main.jl  note
Julia_Performance-Test/: main.jl  note
Project - Python新聞關鍵詞抽取分析/: GetNewsFun.ipynb
Project - Python新聞關鍵詞抽取分析/.ipynb_checkpoints/: 20180104_​上緯董座叫屈　民間與政府對離岸風電關注低-checkpoint.txt  GetNews-checkpoint.ipynb
Project - Python新聞關鍵詞抽取分析/NPL/: GetNews.ipynb  Train_LSTM.ipynb
Project - Python新聞關鍵詞抽取分析/NPL0517/: 01_Train_LSTM_Model.ipynb  02_Analysis_News.ipynb  GetNews.ipynb  words_token_dict.txt
Project - Python新聞關鍵詞抽取分析/離岸風電/: 20180103_「示範」風機給補考還是死當福海離岸風電不能開發.txt  20180104_新年新希望經長沈榮津許了這3個願望.txt  20180105_響應小英喊加薪港務公司：基層加薪最高562.txt  20180116_離岸風電遴選避免贏者全拿.txt  20180117_台灣離岸風電55G荷蘭願協助培訓海事工程人才.txt  20180117_離岸風電兩案闖關台電過關桃新失敗.txt  20180121_環評阻產業發展？環保署反駁.txt  20180122_離岸風電迎外商龔明鑫：讓台灣產業向上升級.txt  20180127_台船攜手丹麥風電大廠力攻海上變電站商機.txt  20180131_兩本土財團離岸風電環評案遠東過關上緯要補正.txt  20180207_世紀鋼自結去年12月EPS006元年減4成.txt  20180207_沃旭加碼彰化打造首個百萬瓦儲能設施.txt  20180208_全球風電龍頭彰化建大型儲能設施.txt  20180208_立院副院長蔡其昌：持續推動政治中心移台中.txt  20180213_​西門子與永冠能源簽約發展離岸風力發電.txt  20180213_台電離岸風電完成招標2020年可供9萬家戶一年用電.txt  20180222_中鋼面臨7千人退休潮董座團拜盼做好傳承.txt  20180222_六大行庫今年徵才超過2200人.txt  20180304_CIP下半年成立維護運轉基地7產業將受惠.txt  20180307_沃旭4風場投資3800億母公司擔保融資擬發綠色債.txt  (+117 more)
Project - Quantitative Trading/: GetStocks.ipynb
Python - Acdemic Citation Network/: refernce.txt  test.py
Python_Acdemic-Citation-Network/: refernce.txt
Python_Quantitative-Trading/: GetStocks.ipynb
Python_Semantic-Analysis/: GetNews-CNA.ipynb  GetNews0328.ipynb  Untitled.ipynb  情感詞典.xlsx
acdemic citation network/: refernce.txt
vscode cpp test/: main.cpp
vtk test/CPUDepthPeeling/: Allmake  CMakeLists.txt  CorrectlyRenderTranslucentGeometry.cxx
vtk test/MouseEventsObserver/: Allmake  CMakeLists.txt
vtk test/MultipleViewports/: CMakeLists.txt
(+167 files in other folders)
